--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,6 +74,7 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: latest
+          install-mode: goinstall
           args: --timeout=5m
 
   build:
