feat(commands): implement slash command handling

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ cmd/agar/agar
 examples/*_demo
 examples/*/application
 examples/*/border
+examples/*/commands
 examples/*/footer
 examples/*/input
 examples/*/prompt
